# GenAI-python

./: .gitignore
.claude/: settings.local.json
Basics-uv-pip/: pip.md  uv.md
GenAI-uv/: README.md  handycommands.md  pyproject.toml  requirements.txt
GenAI-uv/.devcontainer/: docker-compose.yml
GenAI-uv/01-tokenization/: 01-tokenization.py
GenAI-uv/02-vector-embeddings/: 02-vector-embeddings.py  vectore_Embedding_perplexity.py
GenAI-uv/03-system_prompts/: cot.py  few-shot-prompting.py  few-shot-prompting2.py  persona_AI.py  practice01.py  practice02.py  prompt_practice01.txt  zero-shot-prompting.py  zero-shot-prompting2.py
GenAI-uv/05-Rag1/: 01-Indexing.py  02-Retrievel-chat.py  Stacks.md
GenAI-uv/07_langGraph/: code_graph.py  graph.py  readme.md
GenAI-uv/08_tool/: graph_with_tools.py  readme.md
GenAI-uv/09_human_in_the_loop/: hil_graph.py
GenAI-uv/13_mcp_codes/: readme.md
GenAI-uv/RAG_queues/: Indexing.py  Stacks.md  docker-compose.yml  main.py  server.py
GenAI-uv/RAG_queues/worker_queue/: connection.py  worker.py
GenAI-uv/chat_graph/: chat_graph.py  monitoring.py  readme.md
GenAI-uv/langfuse/: readme.md
GenAI-uv/memory/: docker-compose.yml  main.py  readme.md
GenAI-uv/projects/cursor-cli/: CGFixer.py
GenAI-uv/projects/persona-project/: main.py  prompts.py  pyproject.toml
GenAI-uv/vibe_talk/: readme.md
GenAI-uv/vibe_talk/app/: graph.py  main.py
GenAI/01-tokenization/: pyproject.toml
claude-architech-F/: .env  contents.md  main.py  pyproject.toml
npm-proj/: package-lock.json  package.json
project-ideas/: project-basic.md
(+81 files in other folders)
