[project]
name = "genai-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.9",
    "openai>=1.99.1",
    "pypdf>=6.0.0",
    "rq>=2.5.0",
    "tiktoken>=0.10.0",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "projects/persona-project",
]
